--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,9 +6,10 @@ python-multipart==0.0.6
 sqlalchemy==2.0.23
 pydantic==2.5.0
 pydantic-settings==2.1.0
-stripe==7.5.0
 python-dotenv==1.0.0
 psycopg2-binary==2.9.9
-alembic==1.12.1
-aiosmtplib==3.0.1
 email-validator==2.1.0
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+PyYAML>=6.0
+aiohttp>=3.9.0
