--- a/requirements.txt
+++ b/requirements.txt
@@ -24,28 +24,6 @@ email-validator==2.1.0
 beautifulsoup4>=4.12.0
 PyYAML>=6.0
 
-# Docker Analysis
-docker==7.0.0
-
-# GraphQL Support
-gql==3.5.0
-graphql-core==3.2.3
-
-# Machine Learning
-scikit-learn==1.3.2
-numpy==1.26.2
-joblib==1.3.2
-
-# Enhanced Features
-websockets==12.0
-redis==5.0.1
-celery==5.3.4
-prometheus-client==0.19.0
-
-# Advanced Security
-cryptography==41.0.7
-pyotp==2.9.0
-
 # Payment Integration
-stripe==7.8.0
+stripe>=7.0.0
 mercadopago==2.2.1
