--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,28 @@
+# Core FastAPI
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+python-multipart==0.0.6
+
+# Authentication
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
+
+# Database
 sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+
+# Pydantic
 pydantic==2.5.0
 pydantic-settings==2.1.0
-python-dotenv==1.0.0
-psycopg2-binary==2.9.9
-email-validator==2.1.0
+
+# HTTP Requests
 requests>=2.31.0
+
+# Utils
+python-dotenv==1.0.0
+email-validator==2.1.0
 beautifulsoup4>=4.12.0
 PyYAML>=6.0
-aiohttp>=3.9.0
+
+# Payment Integration
+stripe>=7.0.0
