Fix: Atualizar Pydantic para >=2.7.0 (compatível Python 3.13) e remover mercadopago

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,9 +11,9 @@ passlib[bcrypt]==1.7.4
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 
-# Pydantic
-pydantic==2.5.0
-pydantic-settings==2.1.0
+# Pydantic (compatible with Python 3.13)
+pydantic>=2.7.0
+pydantic-settings>=2.2.0
 
 # HTTP Requests
 requests>=2.31.0
