--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,9 @@ passlib[bcrypt]==1.7.4
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 
-# Pydantic
-pydantic==2.5.0
-pydantic-settings==2.1.0
+# Pydantic (compatible with Python 3.13)
+pydantic>=2.7.0
+pydantic-settings>=2.2.0
 
 # HTTP Requests
 requests>=2.31.0
@@ -26,4 +26,3 @@ PyYAML>=6.0
 
 # Payment Integration
 stripe>=7.0.0
-mercadopago==2.2.1
