ajustes para deploy em render

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,6 @@ STRIPE_WEBHOOK_SECRET=whsec_SEU_CODIGO_AQUI
 SMTP_HOST=smtp-mail.outlook.com
 SMTP_PORT=587
 SMTP_USER=mac526@hotmail.com
-SMTP_PASSWORD=sua_senha_de_aplicativo
+SMTP_PASSWORD=mA23&sA01
 FROM_EMAIL=mac526@hotmail.com
 FROM_NAME=Security Scanner Pro
