--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ python-dotenv==1.0.0
 email-validator==2.1.0
 beautifulsoup4>=4.12.0
 PyYAML>=6.0
+packaging>=23.2
 
 # Payment Integration
 stripe>=7.0.0
