--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: security-scanner-api
     runtime: python
     rootDir: security-scanner
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt && pip install -r backend/requirements.txt
     startCommand: uvicorn backend.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
