--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,8 @@ email-validator==2.1.0
 beautifulsoup4>=4.12.0
 PyYAML>=6.0
 packaging>=23.2
+reportlab==4.0.7
+pillow==10.1.0
 
 # Payment Integration
 stripe>=7.0.0
