--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: security-scanner-api
     runtime: python
-    rootDir: security-scanner
+    rootDir: .
     buildCommand: pip install -r requirements.txt && pip install -r backend/requirements.txt
     startCommand: uvicorn backend.main:app --host 0.0.0.0 --port $PORT
     envVars:
