--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,3 +29,9 @@ pillow==10.1.0
 
 # Payment Integration
 stripe>=7.0.0
+
+# Machine Learning
+numpy==1.26.4
+scipy==1.11.4
+scikit-learn==1.4.2
+joblib==1.3.2
