--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,9 @@ STRIPE_PUBLISHABLE_KEY=pk_test_SEU_CODIGO_AQUI
 STRIPE_WEBHOOK_SECRET=whsec_SEU_CODIGO_AQUI
 
 # Email (para reset de senha)
-SMTP_HOST=smtp-mail.outlook.com
+SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=mac526@hotmail.com
+SMTP_USER=thomaz2523@gmail.com
 SMTP_PASSWORD=mA23&sA01
-FROM_EMAIL=mac526@hotmail.com
-FROM_NAME=Security Scanner Pro
+FROM_EMAIL=thomaz2523@gmail.com
+FROM_NAME=Iron Net
